@@ -773,7 +773,7 @@ public class AgentFileManager extends ViewPart
 
       final Object[] objects = selection.toArray();
 
-      new ConsoleJob(Messages.get().SelectServerFileDialog_JobTitle, null, Activator.PLUGIN_ID, null) {
+      new ConsoleJob("Reading remote directory", null, Activator.PLUGIN_ID, null) {
          @Override
          protected void runInternal(IProgressMonitor monitor) throws Exception
          {
@@ -798,7 +798,7 @@ public class AgentFileManager extends ViewPart
          @Override
          protected String getErrorMessage()
          {
-            return Messages.get().SelectServerFileDialog_JobError;
+            return "Cannot read remote directory";
          }
       }.start();
    }
@@ -897,7 +897,7 @@ public class AgentFileManager extends ViewPart
             @Override
             protected String getErrorMessage()
             {
-               return Messages.get().UploadFileToServer_JobError;
+               return "Cannot upload file to remote agent";
             }
          }.start();
       }
