@@ -88,7 +88,7 @@ public class UploadFileToServer implements IWorkbenchWindowActionDelegate
    						@Override
    						public void setTotalWorkAmount(long workTotal)
    						{
-   							monitor.beginTask(Messages.get().UploadFileToServer_TaskNamePrefix + localFile.getAbsolutePath(), (int)workTotal);
+   							monitor.beginTask(Messages.get(getDisplay()).UploadFileToServer_TaskNamePrefix + localFile.getAbsolutePath(), (int)workTotal);
    						}
    						
    						@Override
